# mlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  c.c  m-algo.h  m-array.h  m-atomic.h  m-bitset.h  m-bptree.h  m-bstring.h  m-buffer.h  m-c-mempool.h  m-concurrent.h  m-core.h  m-deque.h  m-dict.h  m-funcobj.h  m-generic.h  m-genint.h  m-i-list.h  m-i-shared.h  m-lib.pc.in  m-lib.spec  m-list.h  m-mempool.h  m-module.h  m-mutex.h  m-prioqueue.h  m-protect.h  m-queue.h  m-rbtree.h  m-register.h  m-serial-bin.h  m-serial-json.h  m-shared-ptr.h  m-shared.h  m-snapshot.h  m-string.h  (+10 more)
.github/workflows/: ccpp.yml  codeql-analysis.yml  packages.yml
bench/: Makefile  bench-CC.c  bench-boost.cpp  bench-cmc.c  bench-collectionc.c  bench-concurrentqueue.cpp  bench-ctl.c  bench-densehashmap.cpp  bench-emhash.cpp  bench-emilib.cpp  bench-find-sort.cpp  bench-flathashmap.cpp  bench-glib.c  bench-hopscotchmap.cpp  bench-klib.c  bench-libcollection.c  bench-libdynamic.c  bench-liblfds.c  bench-libsrt.c  bench-mlib.c  bench-nedtries.c  bench-plain-c.c  bench-pottery.c  bench-qlibc.c  bench-qt.cpp  bench-rapidjson.cpp  bench-rigtorp-hashmap.cpp  bench-rigtorp-mpmcqueue.cpp  bench-sparsepp.cpp  bench-stc.c  bench-stl.cpp  bench-string-2.cpp  bench-string.cpp  bench-tommyds.c  bench-uthash.c  bench-verstable.c  bench-xxhash.c  common.c  common.h  max-dict.c  (+1 more)
bench/nucleotide/: Makefile  fasta.c  nucleotide.c
bench/udb/: Makefile  Makefile-mlib  test-mlib-oa.c  test-mlib.c
bench/udb2/: Makefile  Makefile-mlib  test-mlib.c
doc/: API Breakage.txt  API-Breakage.txt  API.txt  Container.html  Container.ods  DEV.md  ISSUES.org  cc.sh  oplist.odp
example/: CMakeLists.txt  Makefile  config.curl  ex-algo02.c  ex-algo03.c  ex-algo04.c  ex-alloc1.c  ex-alloc2.c  ex-alloc3.c  ex-array00.c  ex-array01.c  ex-array02.c  ex-array03.c  ex-array04.c  ex-array05.c  ex-astar.c  ex-bitset01.c  ex-bptree01.c  ex-bptree02.c  ex-bptree03.c  ex-bptree04.c  ex-bstring01.c  ex-buffer01.c  ex-buffer02.c  ex-buffer03.c  ex-curl.c  ex-defer01.c  ex-deque01.c  ex-deque02.c  ex-dict01.c  ex-dict02.c  ex-dict03.c  ex-dict04.c  ex-dict05.c  ex-dict06.c  ex-funcobj01.c  ex-grep01.c  ex-i-list.c  ex-json01.c  ex-list01.c  (+74 more)
tests/: CMakeLists.txt  Make-check-cl.bat  Makefile  check-array.cpp  check-bptree-map.cpp  check-bptree-set.cpp  check-deque.cpp  check-dplist.cpp  check-generic.hpp  check-list.cpp  check-prioqueue.cpp  check-rbtree.cpp  check-umap.cpp  check-uset.cpp  coverage.h  dict.txt  except-array.c  except-bitset.c  except-bptree.c  except-bstring.c  except-deque.c  except-list.c  except-rbtree.c  except-shared-ptr.c  except-string.c  fail-chain-oplist.c  fail-incompatible.c  fail-no-oplist.c  mympz.h  synthesis.ref  test-malgo.c  test-marray.c  test-mbitset.c  test-mbptree.c  test-mbstring.c  test-mbuffer.c  test-mcmempool.c  test-mconcurrent.c  test-mcore.c  test-mdeque.c  (+44 more)
